[tool.poetry]
name = "sheep"
version = "0.1.0"
description = ""
authors = ["Oskar Sveinsen <oskarsv@stud.ntnu.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.0"
numpy = "^1.26.4"
scipy = "^1.14.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
